<?xml version="1.0" encoding="utf-8"?>

<resources>
  <string name="app_name">Heeler</string>
  <string name="action_settings">Settings</string>

  <string name="button_delete_all">Delete All</string>
  <string name="button_delete_uploaded">Delete Uploaded</string>
  <string name="button_detail">Detail</string>
  <string name="button_detail_location">Location Detail</string>
  <string name="button_detail_sortie">Sortie Detail</string>
  <string name="button_dismiss">Dismiss</string>
  <string name="button_map">Map</string>
  <string name="button_start">Start</string>
  <string name="button_start_stop">Start/Stop</string>
  <string name="button_stop">Stop</string>
  <string name="button_special">Special Location</string>

  <string name="dialog_location">Location Detail</string>
  <string name="dialog_observation">Observation Detail</string>
  <string name="dialog_sortie">Sortie Detail</string>

  <string name="hint_sortie_name">Optional Sortie Name</string>

  <string name="label_no_rows">No Rows</string>
  <string name="label_no_observations">No Observations</string>
  <string name="label_stub">Stub</string>

  <string name="main_menu_about">About</string>
  <string name="main_menu_settings">Settings</string>
  <string name="main_menu_clean">DB Clean</string>
  <string name="main_menu_upload">Upload</string>
  <string name="main_tab_console">Console</string>
  <string name="main_tab_hot">Hot</string>
  <string name="main_tab_sortie">Sortie</string>
  <string name="main_tab_ssid">SSID</string>

  <string name="menu_context_delete">Delete</string>
  <string name="menu_context_hot_list">Hot List</string>

  <string name="preference_audio">Cues</string>
  <string name="preference_audio_summary">Audio Cues</string>
  <string name="preference_distance">Movement Radius</string>
  <string name="preference_distance_summary">Geographic Location</string>
  <string name="preference_distance_dialog_title">Movement Radius</string>
  <string name="preference_install_id">Installation UUID</string>
  <string name="preference_install_name">Installation UUID</string>
  <string name="preference_install_name_dialog">Installation Identifier</string>
  <string name="preference_install_summary">Installation Identifier</string>
  <string name="preference_speech">Speech</string>
  <string name="preference_speech_summary">Spoken Status</string>
  <string name="preference_title01">Collection</string>
  <string name="preference_title02">Audio</string>
  <string name="preference_title03">Administration</string>
  <string name="preference_wifi">Wifi Polling</string>
  <string name="preference_wifi_dialog_title">WiFi Scan Rate</string>
  <string name="preference_wifi_summary">Scan Rate (Time)</string>

  <string name="settings_audio_cue">Audio Cues Enabled</string>
  <string name="settings_audio_header">Audio Options</string>
  <string name="settings_collection_controls">Collection Controls</string>
  <string name="settings_distance">Distance</string>
  <string name="settings_speech">Speech Enabled</string>
  <string name="settings_time">Time</string>
  <string name="settings_uuid">UUID</string>

  <string name="text_accuracy">Accuracy:</string>
  <string name="text_accy">Accy:</string>
  <string name="text_alt">Alt:</string>
  <string name="text_altitude">Altitude:</string>
  <string name="text_bssid">BSSID:</string>
  <string name="text_caps">Caps:</string>
  <string name="text_capable">Capable:</string>
  <string name="text_capability">Capability:</string>
  <string name="text_collection">Collection</string>
  <string name="text_frequency">Frequency:</string>
  <string name="text_freq">Freq:</string>
  <string name="text_geo">Geo:</string>
  <string name="text_geoloc">GeoLoc:</string>
  <string name="text_idle">Idle</string>
  <string name="text_installation">Installation:</string>
  <string name="text_lat">Lat:</string>
  <string name="text_latitude">Latitude:</string>
  <string name="text_level">Level:</string>
  <string name="text_locations">Locations:</string>
  <string name="text_long">Long:</string>
  <string name="text_longitude">Longitude:</string>
  <string name="text_location">Location</string>
  <string name="text_location2">Location:</string>
  <string name="text_name">Name:</string>
  <string name="text_row_type">Row Type</string>
  <string name="text_obs">Obs:</string>
  <string name="text_observe">Observe:</string>
  <string name="text_observations">Observations:</string>
  <string name="text_row_count">Rows:</string>
  <string name="text_slash">/</string>
  <string name="text_sortie">Sortie:</string>
  <string name="text_sorties">Sorties:</string>
  <string name="text_sortie_name">Name:</string>
  <string name="text_ssid">SSID:</string>
  <string name="text_time">Time:</string>
  <string name="text_total_rows">All</string>
  <string name="text_uuid">UUID:</string>
  <string name="text_uploaded_rows">Uploaded</string>

  <string name="toast_gps_disabled">Must Enable GPS</string>
  <string name="toast_hot_duplicate">Duplicate Hot List Item</string>
  <string name="toast_hot_fresh">Fresh Hot List Item</string>
  <string name="toast_hot_match">Hot List Match</string>
  <string name="toast_location_failure">Special Location Failure</string>
  <string name="toast_location_success">Special Location Success</string>
  <string name="toast_wifi_disabled">Must Enable WiFi</string>

  <string name="title_activity_chart">ChartActivity</string>
</resources>
