<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin"
  android:paddingBottom="@dimen/activity_vertical_margin"
  tools:context="com.digiburo.mellow.heeler.app.MenuActivity">

  <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableClean"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="2">

    <TableRow>
      <TextView style="@style/LabelView01" android:text="@string/text_row_type"/>
      <TextView style="@style/LabelView01" android:text="@string/text_total_rows"/>
      <TextView style="@style/LabelView01" android:text="@string/text_uploaded_rows"/>
    </TableRow>

    <TableRow>
      <TextView style="@style/LabelView01" android:text="@string/text_locations"/>
      <TextView style="@style/LabelView01" android:id="@+id/textLocationTotal"/>
      <TextView style="@style/LabelView01" android:id="@+id/textLocationUploaded"/>
    </TableRow>

    <TableRow>
      <TextView style="@style/LabelView01" android:text="@string/text_observations"/>
      <TextView style="@style/LabelView01" android:id="@+id/textObservationTotal"/>
      <TextView style="@style/LabelView01" android:id="@+id/textObservationUploaded"/>
    </TableRow>

    <TableRow>
      <TextView style="@style/LabelView01" android:text="@string/text_sorties"/>
      <TextView style="@style/LabelView01" android:id="@+id/textSortieTotal"/>
      <TextView style="@style/LabelView01" android:id="@+id/textSortieUploaded"/>
    </TableRow>
  </TableLayout>

  <Button style="@style/ButtonStyle01"
    android:id="@+id/buttonDeleteAll"
    android:text="@string/button_delete_all"
    android:layout_below="@id/tableClean"/>

  <Button style="@style/ButtonStyle01"
    android:id="@+id/buttonDeleteUploaded"
    android:text="@string/button_delete_uploaded"
    android:layout_below="@id/buttonDeleteAll"/>
</RelativeLayout>