<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.digiburo.mellow.heeler.app.MainActivity" >

  <!-- ActionBar/ActionItem -->

  <item android:id="@+id/menu_about"
    android:orderInCategory="100"
    android:showAsAction="never"
    android:title="@string/main_menu_about"/>

  <item android:id="@+id/menu_settings"
    android:orderInCategory="100"
    android:showAsAction="never"
    android:title="@string/main_menu_settings"/>

  <item android:id="@+id/menu_clean"
    android:orderInCategory="100"
    android:showAsAction="never"
    android:title="@string/main_menu_clean"/>

  <item android:id="@+id/menu_upload"
    android:orderInCategory="100"
    android:showAsAction="never"
    android:title="@string/main_menu_upload"/>
</menu>
