<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.digiburo.mellow.heeler.app.MainActivity">

  <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableSortie"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="1">

    <TableRow>
      <TextView style="@style/LabelView01"
        android:text="@string/text_sortie_name"/>
      <EditText style="@style/EditView01"
        android:id="@+id/editSortieName"
        android:hint="@string/hint_sortie_name"/>
    </TableRow>

    <TableRow>
      <Button style="@style/ButtonStyle01"
        android:id="@+id/buttonStartStop"
        android:text="@string/button_start"/>
      <TextView style="@style/EditView01"
        android:id="@+id/textStatus"
        android:text="@string/text_idle"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_width="0dip"
        android:layout_height="wrap_content"/>
    </TableRow>
  </TableLayout>

  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLocation"
    android:orientation="vertical"
    android:layout_below="@id/tableSortie"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <TextView style="@style/EditView01"
      android:id="@+id/textLocationRowCount"
      android:layout_gravity="center_horizontal"
      android:text="@string/text_location"/>

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:id="@+id/tableLocation"
      android:background="#ff0000"
      android:layout_below="@id/linearLocation"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:stretchColumns="1">

      <TableRow>
        <TextView style="@style/LabelView01"
          android:text="@string/text_geoloc"/>
        <TextView style="@style/EditView01"
          android:id="@+id/textGeoLoc"/>
      </TableRow>

      <TableRow>
        <TextView style="@style/LabelView01"
          android:text="@string/text_time"/>
        <TextView style="@style/EditView01"
          android:id="@+id/textLocationTime"/>
      </TableRow>
    </TableLayout>
  </LinearLayout>

  <Button style="@style/ButtonStyle01"
    android:id="@+id/buttonSpecialLocation"
    android:text="@string/button_special"
    android:layout_below="@id/linearLocation"/>

  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearObservation"
    android:orientation="vertical"
    android:layout_below="@id/buttonSpecialLocation"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <TextView style="@style/EditView01"
      android:id="@+id/textObservationRowCount"
      android:layout_gravity="center_horizontal"
      android:text="@string/text_observations"/>

    <ListView
      android:id="@id/android:list"
      android:dividerHeight="5dp"
      android:layout_weight="1"
      android:drawSelectorOnTop="true"
      android:layout_height="0dp"
      android:layout_width="match_parent"
      android:layout_marginLeft="6dp"
      android:layout_marginTop="5dp"
      android:layout_marginRight="6dp"/>

    <TextView
      android:id="@id/android:empty"
      android:text="@string/label_no_observations"
      android:textColor="#ffffff"
      android:textSize="20sp"
      android:textStyle="bold"
      android:typeface="sans"
      android:gravity="center"
      android:layout_height="match_parent"
      android:layout_width="match_parent"/>
  </LinearLayout>
</RelativeLayout>
