<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.digiburo.mellow.heeler.app.MenuActivity">

  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearAudio"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <TextView style="@style/EditView01"
      android:text="@string/settings_audio_header"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"/>

    <CheckBox
      android:id="@+id/cbAudio"
      android:text="@string/settings_audio_cue"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"/>

    <CheckBox
      android:id="@+id/cbSpeech"
      android:text="@string/settings_speech"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"/>
  </LinearLayout>

  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearSpinners"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_below="@id/linearAudio"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <TextView style="@style/EditView01"
      android:text="@string/settings_collection_controls"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"/>

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:background="#ff0000"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:stretchColumns="1">

      <TableRow>
        <TextView style="@style/LabelView01"
          android:text="@string/settings_distance"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>
        <Spinner
          android:id="@+id/spinnerDistance"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:drawSelectorOnTop="true"
          android:prompt="@string/preference_distance" />
      </TableRow>

      <TableRow>
        <TextView style="@style/LabelView01"
          android:text="@string/settings_time"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>
        <Spinner
          android:id="@+id/spinnerTime"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:drawSelectorOnTop="true"
          android:prompt="@string/preference_wifi" />
      </TableRow>
    </TableLayout>
  </LinearLayout>

  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearUuid"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_below="@id/linearSpinners"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <TextView style="@style/EditView01"
      android:text="@string/settings_uuid"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"/>

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:background="#ff0000"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:stretchColumns="1">

      <TableRow>
        <TextView style="@style/LabelView01"
          android:text="@string/text_installation"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>
        <TextView style="@style/EditView01"
          android:id="@+id/tvInstallationId"
          android:maxLines="3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:linksClickable="true"/>
      </TableRow>
    </TableLayout>
  </LinearLayout>
</RelativeLayout>
