<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.digiburo.mellow.heeler.app.MainActivity">

  <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableSortie"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="1">

    <TableRow>
      <TextView style="@style/LabelView01"
        android:text="@string/text_name"/>
      <TextView style="@style/EditView01"
        android:id="@+id/textName"/>
    </TableRow>

    <TableRow>
      <TextView style="@style/LabelView01"
        android:text="@string/text_uuid"/>
      <TextView style="@style/UuidView01"
        android:id="@+id/textUuid"/>
    </TableRow>

    <TableRow>
      <TextView style="@style/LabelView01"
        android:text="@string/text_time"/>
      <TextView style="@style/EditView01"
        android:id="@+id/textTime"/>
    </TableRow>
  </TableLayout>

  <Button style="@style/ButtonStyle01"
    android:id="@+id/buttonMap"
    android:text="@string/button_map"
    android:layout_below="@id/tableSortie"/>

  <Button style="@style/ButtonStyle01"
    android:id="@+id/buttonDismiss"
    android:text="@string/button_dismiss"
    android:layout_below="@id/buttonMap"/>
</RelativeLayout>
