<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.digiburo.mellow.heeler.app.MenuActivity">

  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearAudio"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <CheckBox
      android:id="@+id/checkBox01"
      android:text="@string/preference_audio"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"/>

    <CheckBox
      android:id="@+id/checkBox02"
      android:text="@string/preference_speech"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"/>

    <Spinner
      android:id="@+id/spinnerDistance"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:drawSelectorOnTop="true"
      android:prompt="@string/preference_distance" />

    <Spinner
      android:id="@+id/spinnerTime"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:drawSelectorOnTop="true"
      android:prompt="@string/preference_wifi" />

    <TextView style="@style/EditView01"
      android:id="@+id/textLocationId"
      android:text="ryryryry"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"/>
  </LinearLayout>
</RelativeLayout>
