<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin"
  android:paddingBottom="@dimen/activity_vertical_margin"
  tools:context="com.digiburo.mellow.heeler.app.MenuActivity">

  <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableUpload"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="2">

    <TableRow>
      <TextView style="@style/LabelView01" android:text="@string/text_locations"/>
      <TextView style="@style/LabelView01" android:id="@+id/textLocationOriginal"/>
      <TextView style="@style/LabelView01" android:id="@+id/textLocationCurrent"/>
    </TableRow>

    <TableRow>
      <TextView style="@style/LabelView01" android:text="@string/text_observations"/>
      <TextView style="@style/LabelView01" android:id="@+id/textObservationOriginal"/>
      <TextView style="@style/LabelView01" android:id="@+id/textObservationCurrent"/>
    </TableRow>

    <TableRow>
      <TextView style="@style/LabelView01" android:text="@string/text_sorties"/>
      <TextView style="@style/LabelView01" android:id="@+id/textSortieOriginal"/>
      <TextView style="@style/LabelView01" android:id="@+id/textSortieCurrent"/>
    </TableRow>
  </TableLayout>

  <ProgressBar
    android:layout_below="@id/tableUpload"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"/>
</RelativeLayout>